Replace Stripe checkout with PayHere
